--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+yapf = "^0.32.0"
+Django = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 
