--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ license = "MIT"
 python = "^3.10"
 yapf = "^0.32.0"
 Django = "^4.0.1"
+python-dotenv = "^0.19.2"
+django-jazzmin = "^2.4.8"
+dj-database-url = "^0.5.0"
+whitenoise = "^5.3.0"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 
